--- a/index.css
+++ b/index.css
@@ -545,22 +545,24 @@ body {
 ::-webkit-scrollbar-thumb {
   background: var(--text-color);
 }
-:root {
+
+
+:root { 
   --bg-color: rgb(10, 10, 10);
   --text-color: #fff;
   --blog-gray-color: rgb(180, 180, 180);
   --background-image: linear-gradient(
-      90deg,
-      rgba(10, 10, 10, 0.3),
-      rgb(10, 10, 10, 1)
+    90deg,
+    rgba(10, 10, 10, 0.3),
+    rgb(10, 10, 10, 1)
     ),
-    url("Hi! I love python");
+    url(https://images.wallpaperscraft.com/image/galaxy_universe_starry_sky_131807_1280x720.jpg);
   --background-background: linear-gradient(
-      0deg,
-      rgba(10, 10, 10, 1),
-      rgba(10, 10, 10, 0.6)
+    0deg,
+    rgba(10, 10, 10, 1),
+    rgba(10, 10, 10, 0.6)
     ),
-    url("Hi! I love python") center center fixed;
+    url(https://images.wallpaperscraft.com/image/galaxy_universe_starry_sky_131807_1280x720.jpg) center center fixed;
   --height: 50vh;
 }
 
